k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purrfectmatch-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: purrfectmatch-backend
  template:
    metadata:
      labels:
        app: purrfectmatch-backend
    spec:
      containers:
      - name: purrfectmatch-backend
        image: usaidafzal/purrfectmatch-backend:latest
        ports:
        - containerPort: 5000
